Added canvas to html body

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <script src="pacman.js"></script>
     </head>
     <body>
-    
+        <canvas id="gameBoard"></canvas>
     </body>
 </html>
